# MultiEffectsPico

./: .gitignore  Cargo.toml  README.md
devkit/: IDEA.md
devkit/devkit/: Cargo.toml
devkit/rp2040-devkit/: Cargo.toml
devkit/rp2040-devkit/src/: main.rs
fingybass/: Cargo.toml  IDEA.md
fingybass/src/: main.rs
passthrough/: Cargo.toml
passthrough/src/: main.rs
pcbs/baseboard/: baseboard.kicad_pcb  baseboard.kicad_prl  baseboard.kicad_pro  baseboard.kicad_sch  fp-info-cache  sym-lib-table
pcbs/baseboard/baseboard-v0.1/: baseboard-B_Cu.gbr  baseboard-B_Mask.gbr  baseboard-B_Paste.gbr  baseboard-B_Silkscreen.gbr  baseboard-Edge_Cuts.gbr  baseboard-F_Cu.gbr  baseboard-F_Mask.gbr  baseboard-F_Paste.gbr  baseboard-F_Silkscreen.gbr  baseboard-NPTH.drl  baseboard-PTH.drl  baseboard-job.gbrjob
pcbs/devkit/: devkit.kicad_pcb  devkit.kicad_prl  devkit.kicad_pro  devkit.kicad_sch  fp-info-cache  fp-lib-table
pcbs/devkit/devkit-v0.1/: devkit-B_Cu.gbr  devkit-B_Mask.gbr  devkit-B_Paste.gbr  devkit-B_Silkscreen.gbr  devkit-Edge_Cuts.gbr  devkit-F_Cu.gbr  devkit-F_Mask.gbr  devkit-F_Paste.gbr  devkit-F_Silkscreen.gbr  devkit-NPTH.drl  devkit-PTH.drl  devkit-job.gbrjob
pcbs/libs/: rytmos.bak  rytmos.kicad_sym
pcbs/libs/DCJ200-10-A-XX-K_REVA/: GCT_DCJ200-10-A-XX-K_REVA.kicad_mod
pcbs/libs/rytmos.pretty/: PCM1808_breakout.kicad_mod  SlimJack6.3.kicad_mod
